Update package list in config.json for Arch Linux installation

--- a/scripts/archinstall/config/config.json
+++ b/scripts/archinstall/config/config.json
@@ -143,9 +143,65 @@
     "ntp": true,
     "offline": false,
     "packages": [
+        "bottles",
+        "calibre",
+        "curl",
+        "darktable",
+        "digikam",
+        "dolphin",
+        "dolphin-emu",
         "docker",
+        "electrum",
+        "ffmpeg",
+        "filezilla",
         "firefox",
-        "obsidian"
+        "flameshot",
+        "freecad",
+        "gcc",
+        "gimp",
+        "git",
+        "gparted",
+        "gwenview",
+        "handbrake",
+        "hugo",
+        "inkscape",
+        "jellyfin-server",
+        "keepassxc",
+        "kdenlive",
+        "konsole",
+        "kstars",
+        "kubectl",
+        "libreoffice",
+        "lutris",
+        "meld",
+        "monero-gui",
+        "mpv",
+        "musescore",
+        "nextcloud-client",
+        "nmap",
+        "obsidian",
+        "obs-studio",
+        "okular",
+        "pandoc",
+        "pcsx2",
+        "picard",
+        "postgresql",
+        "qgis",
+        "qemu-full",
+        "rclone",
+        "rsync",
+        "steam",
+        "syncthing",
+        "tenacity",
+        "thunderbird",
+        "timeshift",
+        "tmux",
+        "tree",
+        "veracrypt",
+        "virt-manager",
+        "wireshark-qt",
+        "wine",
+        "yt-dlp"
     ],
     "parallel_downloads": 2,
     "profile_config": {
